--- a/business-partner/business-partner.page.html
+++ b/business-partner/business-partner.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-	<app-list-toolbar
+	<!-- <app-list-toolbar
 		pageTitle="{{'List' | translate}}"
 		[ShowFeature]="true"
 		[pageConfig]="pageConfig"
@@ -18,7 +18,11 @@
 		(approveBusinessPartner)="approveBusinessPartner()"
 		(disapproveBusinessPartner)="disapproveBusinessPartner()"
 		(mergeOrders)="showMergePopup($event)"
-	></app-list-toolbar>
+	></app-list-toolbar> -->
+
+	<app-toolbar [page]="this">
+
+	</app-toolbar>
 
 	<section class="table">
 		<header class="bold ion-hide-sm-down">
