--- a/level-policy-detail/level-policy-detail.page.html
+++ b/level-policy-detail/level-policy-detail.page.html
@@ -53,7 +53,7 @@
 												(ionError)="img.src = noImage"
 											/>
 											<div class="image-upload">
-												<ion-icon color="primary" size="large" slot="icon-only" name="cloud-upload-outline" (click)="onClickUpload(true, this.item?.Id)">
+												<ion-icon color="primary" size="large" slot="icon-only" name="cloud-upload-outline" (click)="onClickUpload()">
 												</ion-icon>
 												<ion-label> {{'Upload image' | translate}}</ion-label>
 											</div>
