fix load SO, ContactUDF

--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -514,7 +514,7 @@
 		<!-- Đơn hàng -->
 
 		<app-bp-recent-order
-			[_LastSOs]="item?._LastSOs"
+			[_idBP]="item.Id"
 			[canEdit]="pageConfig.canEdit"
 			*ngIf="pageConfig.showSpinner == false && segmentView.Page == 'bp-recent-order' &&item.Id"
 		></app-bp-recent-order>
