--- a/outlet-detail/outlet-detail.page.html
+++ b/outlet-detail/outlet-detail.page.html
@@ -44,10 +44,10 @@
 									</label>
 									<input (change)="checkPhoneNumber()" class="c-input" formControlName="WorkPhone" type="tel" />
 									<ion-text color="success" *ngIf="formGroup.controls.WorkPhone.valid && formGroup.controls.WorkPhone.dirty">
-										{{'Số điện thoại hợp lệ' | translate}}
+										{{'Valid phone number' | translate}}
 									</ion-text>
 									<ion-text color="danger" *ngIf="!formGroup.controls.WorkPhone.valid">
-										{{'Số điện thoại không hợp lệ hoặc đã được sử dụng' | translate}}
+										{{'Invalid phone number or already in use' | translate}}
 									</ion-text>
 								</div>
 
